[package]
name = "occlum-sgx"
version = "0.1.7"
edition = "2021"
authors = ["Ivan Chirkin <chirkin.ivan@gmail.com>"]
description = "Lib for generate and verify DCAP SGX Report received from Occlum"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aggregion/occlum-sgx"
exclude = ["tests/fixtures/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.21.2"
cfg-if = "1.0.0"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.18"
